table header info alignment fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,6 +79,10 @@ textarea {
   display: inline;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
 .no-margin{
   margin: 1px;
 }
@@ -445,15 +449,19 @@ aside {
     }
   }
 
-  .topframe {
+  .topframe-user {
     height: 60px;
     background: #B50300;
     color: white;
     padding-left: 20px;
-    .game{
-      height: 20px;
-    }
   }
+
+.topframe-table {
+  height: 25px;
+  background: #B50300;
+  color: white;
+  padding-left: 20px;
+}
 
   .profile_container {
     padding-top: 15px;
@@ -837,6 +845,15 @@ input[type="text"] {
   margin-right: 5px;
   margin-top: 20px;
   text-align: right;
+  ul{
+    display: inline-block;
+  }
+  li{
+    display: inline-block;
+    list-style: none;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 .league-title{
@@ -849,6 +866,16 @@ input[type="text"] {
 
 .pts-pos-entry{
   margin-right: 5px;
+  ul{
+    display: inline-block;
+  }
+  li{
+    display: inline-block;
+    list-style: none;
+    border: none;
+    padding-left:5px;
+    padding-right: 5px;
+  }
 }
 
 .feed-item-text{
